--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/src/index.js",
+    "lint": "eslint --ext .ts ./src ./test",
+    "lint:fix": "eslint --ext .ts ./src ./test --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +28,9 @@
   "devDependencies": {
     "@types/module-alias": "^2.0.4",
     "@types/node": "^20.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
