--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:dev": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts ./src ./test",
     "lint:fix": "eslint --ext .ts ./src ./test --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:functional": "jest --projects ./test --runInBand "
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,16 @@
   },
   "homepage": "https://github.com/cleberpereiradev/node-typescript-api#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^20.10.6",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
