--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint --ext .ts ./src ./test --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:functional": "jest --projects ./test --runInBand",
+    "test:unit": "jest",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
     "style:fix": "prettier --write src/**/*.ts test/**/*.ts"
   },
@@ -30,6 +31,7 @@
   },
   "homepage": "https://github.com/cleberpereiradev/node-typescript-api#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/module-alias": "^2.0.4",
@@ -47,6 +49,7 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "axios": "^1.6.5",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "module-alias": "^2.2.3"
